[gd_scene format=3 uid="uid://bp53dafesam0x"]

[ext_resource type="Script" uid="uid://cnsxf72tt67s8" path="res://scenes/credits/credits.gd" id="1_17l06"]
[ext_resource type="Texture2D" uid="uid://c7ok4gtd2drad" path="res://scenes/credits/cody.png" id="1_icb2l"]
[ext_resource type="Texture2D" uid="uid://c14y1ea28aswk" path="res://scenes/credits/kate.png" id="2_17l06"]
[ext_resource type="Texture2D" uid="uid://cl8kwn17s03ym" path="res://scenes/credits/lane.png" id="3_t15ab"]
[ext_resource type="Texture2D" uid="uid://qrg3mq77c56t" path="res://scenes/credits/logan.png" id="4_lwbe5"]
[ext_resource type="Texture2D" uid="uid://cq53o01qmxvph" path="res://scenes/credits/nico.png" id="5_mxqwe"]
[ext_resource type="PackedScene" uid="uid://b5y6knc366bb8" path="res://scenes/title/title_background.tscn" id="6_wprml"]
[ext_resource type="Script" uid="uid://cq2flt7istc8m" path="res://scenes/credits/resting_tween.gd" id="7_mxqwe"]
[ext_resource type="Theme" uid="uid://3cs1r4p0rltc" path="res://assets/themes/invisible_button.tres" id="8_lwbe5"]
[ext_resource type="Texture2D" uid="uid://bcfrb24n5gbhi" path="res://scenes/options/exit.png" id="8_t15ab"]

[node name="Credits" type="Control" unique_id=1547948896]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_17l06")

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=296868416]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 1000
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 1000
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" unique_id=526374054]
layout_mode = 2
theme_override_constants/separation = 100

[node name="Programming" type="HBoxContainer" parent="MarginContainer/VBoxContainer" unique_id=1644304559]
custom_minimum_size = Vector2(300, 245)
layout_mode = 2
size_flags_vertical = 3

[node name="Programming" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Programming" unique_id=1952821017]
custom_minimum_size = Vector2(300, 75)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0

[node name="Programming Text" type="TextureRect" parent="MarginContainer/VBoxContainer/Programming/Programming" unique_id=2119633541]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_17l06")
expand_mode = 1
stretch_mode = 5
script = ExtResource("7_mxqwe")

[node name="Placeholder" type="TextureRect" parent="MarginContainer/VBoxContainer/Programming/Programming" unique_id=1355735154]
layout_mode = 2
size_flags_vertical = 3
expand_mode = 1
stretch_mode = 5

[node name="Placeholder2" type="TextureRect" parent="MarginContainer/VBoxContainer/Programming/Programming" unique_id=1568064505]
layout_mode = 2
size_flags_vertical = 3
expand_mode = 1
stretch_mode = 5

[node name="Programming Text2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Programming" unique_id=39155961]
custom_minimum_size = Vector2(300, 75)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
theme_override_constants/separation = 20

[node name="Kate" type="TextureRect" parent="MarginContainer/VBoxContainer/Programming/Programming Text2" unique_id=709534973]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_17l06")
expand_mode = 1
stretch_mode = 5
script = ExtResource("7_mxqwe")

[node name="Lane" type="TextureRect" parent="MarginContainer/VBoxContainer/Programming/Programming Text2" unique_id=277868704]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("3_t15ab")
expand_mode = 1
stretch_mode = 5
script = ExtResource("7_mxqwe")

[node name="Nico" type="TextureRect" parent="MarginContainer/VBoxContainer/Programming/Programming Text2" unique_id=877777513]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("5_mxqwe")
expand_mode = 1
stretch_mode = 5
script = ExtResource("7_mxqwe")

[node name="Art" type="HBoxContainer" parent="MarginContainer/VBoxContainer" unique_id=933976710]
custom_minimum_size = Vector2(300, 75)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3

[node name="Art" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Art" unique_id=2138936949]
custom_minimum_size = Vector2(300, 75)
layout_mode = 2
size_flags_vertical = 4

[node name="Art Text" type="TextureRect" parent="MarginContainer/VBoxContainer/Art/Art" unique_id=53213065]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_17l06")
expand_mode = 1
stretch_mode = 5
script = ExtResource("7_mxqwe")

[node name="Programming Text2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Art" unique_id=515129689]
custom_minimum_size = Vector2(300, 75)
layout_mode = 2
size_flags_vertical = 4

[node name="Lane" type="TextureRect" parent="MarginContainer/VBoxContainer/Art/Programming Text2" unique_id=1833102993]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("3_t15ab")
expand_mode = 1
stretch_mode = 5
script = ExtResource("7_mxqwe")

[node name="Sound" type="HBoxContainer" parent="MarginContainer/VBoxContainer" unique_id=1623861400]
custom_minimum_size = Vector2(300, 75)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3

[node name="Sound" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Sound" unique_id=68232520]
custom_minimum_size = Vector2(300, 75)
layout_mode = 2
size_flags_vertical = 4

[node name="Sound Text" type="TextureRect" parent="MarginContainer/VBoxContainer/Sound/Sound" unique_id=1988939224]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_17l06")
expand_mode = 1
stretch_mode = 5
script = ExtResource("7_mxqwe")

[node name="Programming Text2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Sound" unique_id=379847085]
custom_minimum_size = Vector2(300, 75)
layout_mode = 2
size_flags_vertical = 4

[node name="Cody" type="TextureRect" parent="MarginContainer/VBoxContainer/Sound/Programming Text2" unique_id=1613743401]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("1_icb2l")
expand_mode = 1
stretch_mode = 5
script = ExtResource("7_mxqwe")

[node name="Level Design" type="HBoxContainer" parent="MarginContainer/VBoxContainer" unique_id=1657813431]
custom_minimum_size = Vector2(300, 245)
layout_mode = 2
size_flags_vertical = 3

[node name="Level Design" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Level Design" unique_id=921705103]
custom_minimum_size = Vector2(300, 75)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0

[node name="Level Design Text" type="TextureRect" parent="MarginContainer/VBoxContainer/Level Design/Level Design" unique_id=964475118]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_17l06")
expand_mode = 1
stretch_mode = 5
script = ExtResource("7_mxqwe")

[node name="Placeholder" type="TextureRect" parent="MarginContainer/VBoxContainer/Level Design/Level Design" unique_id=699503839]
layout_mode = 2
size_flags_vertical = 3
expand_mode = 1
stretch_mode = 5

[node name="Placeholder2" type="TextureRect" parent="MarginContainer/VBoxContainer/Level Design/Level Design" unique_id=872854914]
layout_mode = 2
size_flags_vertical = 3
expand_mode = 1
stretch_mode = 5

[node name="Names" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Level Design" unique_id=1792735484]
custom_minimum_size = Vector2(300, 75)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
theme_override_constants/separation = 20

[node name="Lane" type="TextureRect" parent="MarginContainer/VBoxContainer/Level Design/Names" unique_id=1387896240]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("3_t15ab")
expand_mode = 1
stretch_mode = 5
script = ExtResource("7_mxqwe")

[node name="Logan" type="TextureRect" parent="MarginContainer/VBoxContainer/Level Design/Names" unique_id=1757120074]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("4_lwbe5")
expand_mode = 1
stretch_mode = 5
script = ExtResource("7_mxqwe")

[node name="Nico" type="TextureRect" parent="MarginContainer/VBoxContainer/Level Design/Names" unique_id=333641091]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("5_mxqwe")
expand_mode = 1
stretch_mode = 5
script = ExtResource("7_mxqwe")

[node name="Title Background" parent="." unique_id=1148979379 instance=ExtResource("6_wprml")]

[node name="Button" type="Button" parent="." unique_id=1808748642]
custom_minimum_size = Vector2(300, 100)
layout_mode = 0
offset_left = -75.0
offset_right = 535.0
offset_bottom = 211.0
scale = Vector2(0.25, 0.25)
pivot_offset = Vector2(150, 50)
theme = ExtResource("8_lwbe5")
icon = ExtResource("8_t15ab")

[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/Programming/Programming/Programming Text" to="." method="_on_mouse_enter"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/Programming/Programming/Programming Text" to="." method="_on_mouse_leave"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/Programming/Programming/Placeholder" to="." method="_on_mouse_enter"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/Programming/Programming/Placeholder" to="." method="_on_mouse_leave"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/Programming/Programming/Placeholder2" to="." method="_on_mouse_enter"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/Programming/Programming/Placeholder2" to="." method="_on_mouse_leave"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/Programming/Programming Text2/Kate" to="." method="_on_mouse_enter"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/Programming/Programming Text2/Kate" to="." method="_on_mouse_leave"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/Programming/Programming Text2/Lane" to="." method="_on_mouse_enter"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/Programming/Programming Text2/Lane" to="." method="_on_mouse_leave"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/Programming/Programming Text2/Nico" to="." method="_on_mouse_enter"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/Programming/Programming Text2/Nico" to="." method="_on_mouse_leave"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/Art/Art/Art Text" to="." method="_on_mouse_enter"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/Art/Art/Art Text" to="." method="_on_mouse_leave"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/Art/Programming Text2/Lane" to="." method="_on_mouse_enter"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/Art/Programming Text2/Lane" to="." method="_on_mouse_leave"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/Sound/Sound/Sound Text" to="." method="_on_mouse_enter"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/Sound/Sound/Sound Text" to="." method="_on_mouse_leave"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/Sound/Programming Text2/Cody" to="." method="_on_mouse_enter"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/Sound/Programming Text2/Cody" to="." method="_on_mouse_leave"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/Level Design/Level Design/Level Design Text" to="." method="_on_mouse_enter"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/Level Design/Level Design/Level Design Text" to="." method="_on_mouse_leave"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/Level Design/Level Design/Placeholder" to="." method="_on_mouse_enter"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/Level Design/Level Design/Placeholder" to="." method="_on_mouse_leave"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/Level Design/Level Design/Placeholder2" to="." method="_on_mouse_enter"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/Level Design/Level Design/Placeholder2" to="." method="_on_mouse_leave"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/Level Design/Names/Lane" to="." method="_on_mouse_enter"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/Level Design/Names/Lane" to="." method="_on_mouse_leave"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/Level Design/Names/Logan" to="." method="_on_mouse_enter"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/Level Design/Names/Logan" to="." method="_on_mouse_leave"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/Level Design/Names/Nico" to="." method="_on_mouse_enter"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/Level Design/Names/Nico" to="." method="_on_mouse_leave"]
[connection signal="mouse_entered" from="Button" to="." method="_on_exit_hovered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_exit_unhovered"]
[connection signal="pressed" from="Button" to="." method="_on_exit_pressed"]
